--- a/Labs/02/task1.ipynb
+++ b/Labs/02/task1.ipynb
@@ -36,8 +36,8 @@
     }
    ],
    "source": [
-    "df1 = pd.read_csv('data1.csv')\n",
-    "df2 = pd.read_csv('data2.csv')\n",
+    "df1 = pd.read_csv('../data/data1.csv')\n",
+    "df2 = pd.read_csv('../data/data2.csv')\n",
     "\n",
     "display(df1.columns)\n",
     "display(df2.columns)"
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -489,20 +489,20 @@
        "4  WORCESTER     RUTLAND     16"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3 = pd.read_csv('data3.csv')\n",
+    "df3 = pd.read_csv('../data/data3.csv')\n",
     "\n",
     "df3.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "(4221333, 7)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
