refactor: place data files in named folder

--- a/Labs/02/task1.ipynb
+++ b/Labs/02/task1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -36,8 +36,8 @@
     }
    ],
    "source": [
-    "df1 = pd.read_csv('../data/data1.csv')\n",
-    "df2 = pd.read_csv('../data/data2.csv')\n",
+    "df1 = pd.read_csv('../data/lab02/data1.csv')\n",
+    "df2 = pd.read_csv('../data/lab02/data2.csv')\n",
     "\n",
     "display(df1.columns)\n",
     "display(df2.columns)"
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        "4  Combined elementary and secondary  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "(27033, 9)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -489,20 +489,20 @@
        "4  WORCESTER     RUTLAND     16"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3 = pd.read_csv('../data/data3.csv')\n",
+    "df3 = pd.read_csv('../data/lab02/data3.csv')\n",
     "\n",
     "df3.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "(4221333, 7)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
